@@ -19,3 +19,4 @@ v<0.2.5>, <09/03/2022> -- Added decomp thresholder, additional description notes
 v<0.2.6>, <09/08/2022> -- Added majority vote to ALL, depreciated kmeans and shift thresholders
 v<0.2.6>, <09/11/2022> -- Add INT metric, fix sort bug for DSN
 v<0.2.6>, <09/29/2022> -- Added meta thresholder, updated requirements
+v<0.2.6>, <10/01/2022> -- Updated trained meta-models, added confidence threshold attribute
